hphp/hack/test/typecheck/inout/bad_inout_use_lvalue7.php.exp
File "bad_inout_use_lvalue7.php", line 9, characters 7-24:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue7.php", line 9, characters 13-24:
`->:` operator is not allowed in write context (Parsing[1002])
File "bad_inout_use_lvalue7.php", line 9, characters 13-24:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
